correcting list to stretch

--- a/src/Pages/TodoPage/TodoPage.scss
+++ b/src/Pages/TodoPage/TodoPage.scss
@@ -68,7 +68,7 @@
     color: white;
   }
   .todoList {
-    height: 100%;
+    display: contents;
     p {
       display: flex;
       align-items: center;
